# drawio-icons-msft-sundog

./: MSFT-bluedog.xml  MSFT-sundog.xml  README.md  diff.py  main.py  pyproject.toml
.github/workflows/: manual.yml
